connection resilience completed, references after player exit to be deleted